# t-cmd

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
